src/Lithnet.AccessManager/Lithnet.AccessManager.Service/wwwroot/css/site.css
.loading-overlay {
    display: none;
    width: 100%;
    height: 100%;
    background: rgba(255,255,255,0.8);
    z-index: 1000;
    position: absolute;
    top: 0;
    left: 0;
}

.loading-content {
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    align-items: center;
    position: relative;
}

.loading-text {
    padding-left: 1em;
    font-size: 2rem;
    font-weight: 200;
    color: #555;
}

.color-ams-blue {
    color: rgb(29,168,224);
}

.logout-link {
    color: #777;
}

.button-loading-overlay {
}

.clipboard-copy-button {
}

.speech-button {
}

@font-face {
    font-family: Inconsolata;
    src: url('/fonts/Inconsolata-Regular.ttf');
}

.bg-primary {
    background-color: rgb(29,168,224);
}

.btn-primary, .btn-primary:disabled {
    background-color: rgb(29,168,224);
    border-color: rgb(29,168,224);
}

    .btn-primary:disabled:hover {
        background-color: rgb(29,168,224);
        border-color: rgb(29,168,224);
    }

    .btn-primary:hover {
        background-color: rgb(27, 152, 202);
        border-color: rgb(29,168,224);
    }

.btn-image {
    margin: 5px;
    padding: 2px;
    height: 35px;
    width: 35px;
}

html {
    font-size: 10pt;
}

body {
    color: #666;
    /*font-family: "Open Sans",Arial,Helvetica,sans-serif;*/
}

#page-container {
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.app-header {
    background: rgb(255,255,255);
    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, #f8f9fa 100%);
    font-size: 18px;
    font-weight: 300;
    color: #242424;
    padding: 2rem 0.5rem;
    margin: 0;
    position: relative;
    border-bottom: 1px solid silver;
    order: 0;
    text-align: center;
}

.navbar {
    order: 1;
    border-bottom: 1px solid silver;
}

.app-title {
    font-weight: 200;
    font-size: 3rem;
    flex-grow: 1;
    color: #333;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.app-logo {
    max-height: 75px;
    padding: 0 1.5rem 0 1.5rem;
}

.center-content {
    align-items: center;
    text-align: center;
}

.content {
    max-width: 600px;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    padding: 1rem;
    order: 2;
    position: relative;
}

.form-content-icon {
    padding: 1rem 2rem 1rem 1rem;
}

.form-content-header {
    /*    padding: 1rem 2rem 1rem 1rem;*/
    font-size: 2rem;
    font-weight: 200;
    color: #555;
    /* background-color: rgba(248,248,248,.9);*/
    position: relative;
    margin-bottom: 1rem;
    border-top-right-radius: 0.75rem;
    border-top-left-radius: 0.75rem;
}

.form-content-subheader {
    font-size: 1.3rem;
    font-weight: 300;
    color: #555;
    background-color: rgba(248,248,248,.5);
    border-bottom: 1px solid silver;
    position: relative;
    padding: 1rem 0;
    margin-bottom: 1rem;
}

.computer-name {
    font-weight: bold;
}

.form-content {
    flex: 1;
}

.form-container {
    position: relative;
    border: 1px solid silver;
    display: flex;
    flex-direction: column;
    padding: 1rem;
    border-radius: 1rem;
}

    .form-container form {
        width: 100%;
    }

    .form-container header {
        display: block;
        font-size: 1.5rem;
        font-weight: 300;
        color: #242424;
        /*        padding: 15px 13px;*/
        margin: 0;
        border-bottom-width: 1px;
        border-bottom-style: solid;
        border-bottom-color: rgba(0,0,0,.1);
        background: rgba(248,248,248,.9);
        position: relative;
    }

    .form-container .subtitle {
        font-weight: bold;
    }

    .form-container fieldset {
        display: block;
        padding: 25px 14px 5px;
        border: none;
        background: rgba(255,255,255,.9);
        position: relative;
    }

    .form-container section {
        margin-bottom: 15px;
        position: relative;
    }

    .form-container label.title {
        display: block;
        margin-bottom: 3px;
        line-height: 19px;
        font-weight: 600;
        font-size: 1rem;
        color: #333;
    }

    .form-container label.input {
        position: relative;
        display: block;
        font-weight: 400;
        max-width: 100%;
        font-size: 1rem;
    }

    .form-container i.icon-append {
        border-color: #bdbdbd;
        color: #a2a2a2;
        right: 5px;
        padding-left: 3px;
        border-left-width: 1px;
        border-left-style: solid;
        position: absolute;
        top: 5px;
        width: 22px;
        height: 22px;
        font-size: 1rem;
        line-height: 22px;
        text-align: center;
    }

    .form-container input.dataEntry {
        display: block;
        padding-right: 37px;
        border-color: #bdbdbd;
        width: 100%;
        height: 32px;
        padding: 5px 10px;
        outline: 0;
        border-width: 1px;
        border-style: solid;
        border-radius: 0;
        background: #fff;
        color: #404040;
    }

    .form-container textarea.dataEntryLarge {
        display: block;
        padding-right: 37px;
        border-color: #bdbdbd;
        width: 100%;
        height: 64px;
        padding: 5px 10px;
        outline: 0;
        border-width: 1px;
        border-style: solid;
        border-radius: 0;
        background: #fff;
        color: #404040;
    }

    .form-container .tooltip {
        position: absolute;
        bottom: 100%;
        margin-bottom: 15px;
        z-index: 99999;
        left: -9999px;
        padding: 2px 8px 3px;
        font-size: 0.8rem;
        line-height: 16px;
        font-weight: 400;
        background: rgba(0,0,0,.9);
        color: #fff;
        opacity: 0;
    }

        .form-container .tooltip::after {
            top: 100%;
            right: 11px;
            border-top: 4px solid rgba(0,0,0,.9);
            border-right: 4px solid transparent;
            border-left: 4px solid transparent;
            content: '';
            position: absolute;
            margin: 0;
            padding: 0;
        }

    .form-container footer {
        margin: 0;
        padding-top: 1rem;
    }

        .form-container footer .btn-primary {
            float: right;
            margin-left: 1.5rem;
            max-width: 50%;
        }

        .form-container footer .btn-secondary, .form-container footer .btn-outline-secondary {
            float: left;
            margin-right: 1.5rem;
            max-width: 50%;
        }

    .form-container .error {
        color: #8f2626;
        text-align: center;
        display: block;
    }

.card-footer button {
    margin: 3px;
}

#history-panel .card-header {
    display: flex;
    flex-direction: row;
    font-size: 1rem;
    vertical-align: middle;
}

.password-history-summary {
    padding: 0.5rem;
}

.password-history-counter {
    margin-right: 1rem;
}

.password-history-emph {
    font-weight: bold;
}

.password-details-title {
    font-size: 1.1rem;
}

.password-details-footer {
    text-align: right;
    background-color: #fcfcfc;
}

.phonetic-items {
    font-family: Inconsolata, Consolas, Courier New, Courier, monospace;
}

.phonetic-item {
}

.resultsText {
    border-color: #f0f0f0;
    height: 32px;
    padding: 5px 10px;
    outline: 0;
    border-width: 1px;
    border-style: solid;
    border-radius: 0;
    background: #fbfbfb;
    color: #404040;
    width: 100%;
    display: table-cell;
    position: relative;
}

.input-group {
    width: 100%;
    display: flex;
    flex-direction: row;
}

.input-group-append {
    width: 1%;
    vertical-align: middle;
    display: flex;
    height: 32px;
    flex-direction: row;
}

    .input-group-append button {
        width: 32px;
        height: 32px;
    }

.password-content {
    margin-bottom: 1rem;
    font-family: Inconsolata, Consolas, Courier New, Courier, monospace;
    font-weight: bold;
}

.password-font-size-large {
    font-size: 2.5rem;
}

.password-font-size-normal {
    font-size: 1.5rem;
}

.password-font-spacing-normal {
    letter-spacing: 0.033em;
}

.password-font-spacing-wide {
    letter-spacing: 0.1em;
}

.password-content span {
    display: inline-block;
}

.password-char-digit {
    color: darkblue;
}

.password-char-letter {
    color: slategray;
}

.password-char-other {
    color: darkred;
}

.monochrome .password-char-digit {
    color: #404040;
}

.monochrome .password-char-other {
    color: #404040;
}

.monochrome .password-char-letter {
    color: #404040;
}

.form-computer-details {
    position: relative;
}

.font-options-button {
    position: absolute;
    right: 0;
    bottom: 0;
}

.dropdown-item-checked::before {
    position: absolute;
    left: .4rem;
    content: '✓';
    font-weight: 600;
}

#copy-button {
    margin-left: 10px;
}

@media (min-width: 993px) {
    .navbar-nav {
        width: 100%;
        justify-content: flex-end;
    }
}

@media (max-width: 992px) {
    .navbar {
        order: 0;
    }
}

@media (max-width: 600px) {

    html {
        font-size: 9pt;
    }

    .app-header {
        order: 1;
    }

    .app-title {
        font-size: 2rem;
    }

    .form-container {
        width: auto;
        margin-right: 0;
        margin-left: 0;
        margin-top: 0;
    }

    /*.auth-container .auth-content {
        max-width: 316px;
        margin: 0 auto;
    }*/
}

@media (max-device-width: 480px) {

    html {
        font-size: 8pt;
    }

    .app-logo {
        max-height: 50px;
    }

    .app-title {
        font-size: 1.75rem;
    }

    .content {
        margin-top: 0;
        width: 100%;
    }
}

@media only screen and (max-width: 400px) {
    .content {
        width: 100%;
    }
}

@media only screen and (max-height: 750px) {
    .content {
        margin-top: 0;
    }
}

.hidden {
    display: none;
}

